Fixed scrolling bug for header links on mobile devices

--- a/src/styles/contactForm.module.scss
+++ b/src/styles/contactForm.module.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 @import './variables';
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1250px) {
     .contact-form-layout {
         width: 70vw !important;
         padding-left: .5em;
