--- a/src/styles/errorPage.module.scss
+++ b/src/styles/errorPage.module.scss
@@ -2,7 +2,7 @@
 @import './variables';
 
 /* For tablets and smaller screened laptops */
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1250px) {
     .opening-message-container {
         margin-bottom: -2rem;
     }
