--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -1,7 +1,7 @@
 @import './variables';
 
 /* For tablets and smaller screened laptops */
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1250px) {
     .container {
         margin-top: -4.6% !important;
     }
