--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -29,8 +29,8 @@ and (-webkit-min-device-pixel-ratio: 2) {
     }
 }
 
-.nav-link {
-    color: red; 
+.page-link-selector {
+    z-index: inherit;
 }
 
 .navbar {
