--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -2,7 +2,7 @@
 @import './variables';
 
 /* For tablets and smaller screened laptops */
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1250px) {
     h1, h2, h3, h4, h5, p {
         font-size: 1.25em;
     }
