--- a/src/styles/portfolioItem.module.scss
+++ b/src/styles/portfolioItem.module.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 @import './variables';
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1250px) {
     .header-box {
         height: 14vh !important;
     }
